# asteroids-retro-macos-screensaver

./: .gitignore  AGENTS.md  Cargo.toml  DEATH_LOOP_PROTECTION.md  DESIGN_CHANGES.md  IMPLEMENTATION_SUMMARY.md  PROJECT_PLAN.md  README.md  SHIP_UPDATES.md  deploy-local.sh  product-details.md  product-summary.md  technical-details.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/game/: ai.rs  asteroid.rs  bullet.rs  mod.rs  physics.rs  saucer.rs  ship.rs
src/macos/: mod.rs
src/renderer/: mod.rs  pipeline.rs  shader.wgsl  text.rs  vertex.rs
