[package]
name = "asteroids_screensaver"
version = "0.1.0"
edition = "2021"

[lib]
name = "asteroids_screensaver"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "asteroids_screensaver"
path = "src/main.rs"

[dependencies]
wgpu = { version = "0.19", features = ["metal"] }
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
cgmath = "0.18"
rand = "0.8"
cocoa = "0.25"
objc = "0.2"
pollster = "0.3"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
